# Hydra

./: .gitignore  Cargo.toml  Makefile  README.md  config.toml  rustfmt.toml
hydra/: Cargo.toml
hydra/src/: audio.rs  common.rs  config.rs  ext.rs  gameboy.rs  gamepad.rs  graphics.rs  input.rs  main.rs  ui.rs  window.rs
hydra/src/common/: audio.rs  bit.rs  emulator.rs  errors.rs  timing.rs  util.rs
hydra/src/ext/: genawaiter.rs
hydra/src/gameboy/: apu.rs  cpu.rs  interrupt.rs  joypad.rs  memory.rs  ppu.rs  serial.rs  timer.rs
hydra/src/gameboy/apu/: channel.rs  deserializers.rs  state.rs
hydra/src/gameboy/cpu/: ime.rs  opcode.rs
hydra/src/gameboy/memory/: attributes.rs  hdma.rs  io.rs  mbc.rs  oam.rs  rom.rs  sram.rs  vram.rs  wram.rs
hydra/src/gameboy/memory/io/: deserialized.rs
hydra/src/gameboy/memory/mbc/: huc1.rs  huc3.rs  mbc0.rs  mbc1.rs  mbc2.rs  mbc3.rs  mbc5.rs  mbc6.rs  mbc7.rs  pocketcamera.rs  tama5.rs
hydra/src/gameboy/memory/vram/: deserialized.rs  tileattr.rs
hydra/src/gameboy/ppu/: attributes.rs  colormap.rs  fifo.rs  lcdc.rs  state.rs
hydra_macros/: Cargo.toml
hydra_macros/src/: lib.rs
shader/: default.wgsl  test.wgsl
src/: common.rs  config.rs  ext.rs  gameboy.rs  graphics.rs  main.c  main.rs  ui.rs  wgpu.rs  window.rs
src/common/: bit.rs  clockbarrier.rs  emulator.rs  errors.rs  hydraenums.h  hydraints.h  readwrite.c  readwrite.h
src/ext/: genawaiter.rs
src/gameboy/: cpu.c  cpu.h  cpu.rs  gbdata.h  gbenums.h  gbmain.c  gbmain.h  gbregisters.h  gbrom.c  gbrom.h  memory.rs  opcodes.h  ppu.rs
src/gameboy/memory/: io.rs  (+5 more)
(+6 files in other folders)
