[package]
name = "Hydra"
version = "0.1.0"
edition = "2024"

[dependencies]
cpal = "0.17.2"
funty = "2.0.0"
futures = "0.3.31"
genawaiter = "0.99.1"
hydra_macros = {path = "../hydra_macros"}
muda = "0.17.1"
rand = "0.9.2"
rfd = "0.15.4"
serde = "1.0.228"
toml = "0.9.7"
wgpu = "26.0.1"
winit = "0.30.12"
